# src/api/hospital-wl/apis/HospitalConditionsApi.ts
@@ -1,0 +1,91 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Waiting List Api
+ * Hospital Waiting List management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: xkacani@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  Condition,
+} from '../models';
+import {
+    ConditionFromJSON,
+    ConditionToJSON,
+} from '../models';
+
+export interface GetConditionsRequest {
+    hospitalId: string;
+}
+
+/**
+ * HospitalConditionsApi - interface
+ * 
+ * @export
+ * @interface HospitalConditionsApiInterface
+ */
+export interface HospitalConditionsApiInterface {
+    /**
+     * By using hospitalId you get list of predefined conditions
+     * @summary Provides the list of conditions associated with hospital
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalConditionsApiInterface
+     */
+    getConditionsRaw(requestParameters: GetConditionsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<Condition>>>;
+
+    /**
+     * By using hospitalId you get list of predefined conditions
+     * Provides the list of conditions associated with hospital
+     */
+    getConditions(requestParameters: GetConditionsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<Condition>>;
+
+}
+
+/**
+ * 
+ */
+export class HospitalConditionsApi extends runtime.BaseAPI implements HospitalConditionsApiInterface {
+
+    /**
+     * By using hospitalId you get list of predefined conditions
+     * Provides the list of conditions associated with hospital
+     */
+    async getConditionsRaw(requestParameters: GetConditionsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<Condition>>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling getConditions.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/condition`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(ConditionFromJSON));
+    }
+
+    /**
+     * By using hospitalId you get list of predefined conditions
+     * Provides the list of conditions associated with hospital
+     */
+    async getConditions(requestParameters: GetConditionsRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<Condition>> {
+        const response = await this.getConditionsRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
