# src/api/hospital-wl/apis/HospitalWaitingListApi.ts
@@ -19,10 +19,32 @@ import type {
 } from '../models';
 import {
     WaitingListEntryFromJSON,
+    WaitingListEntryToJSON,
 } from '../models';
+
+export interface CreateWaitingListEntryRequest {
+    hospitalId: string;
+    waitingListEntry: WaitingListEntry;
+}
+
+export interface DeleteWaitingListEntryRequest {
+    hospitalId: string;
+    entryId: string;
+}
 
 export interface GetWaitingListEntriesRequest {
     hospitalId: string;
+}
+
+export interface GetWaitingListEntryRequest {
+    hospitalId: string;
+    entryId: string;
+}
+
+export interface UpdateWaitingListEntryRequest {
+    hospitalId: string;
+    entryId: string;
+    waitingListEntry: WaitingListEntry;
 }
 
 /**
@@ -32,6 +54,40 @@ export interface GetWaitingListEntriesRequest {
  * @interface HospitalWaitingListApiInterface
  */
 export interface HospitalWaitingListApiInterface {
+    /**
+     * Use this method to store new entry into the waiting list.
+     * @summary Saves new entry into waiting list
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {WaitingListEntry} waitingListEntry Waiting list entry to store
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalWaitingListApiInterface
+     */
+    createWaitingListEntryRaw(requestParameters: CreateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>>;
+
+    /**
+     * Use this method to store new entry into the waiting list.
+     * Saves new entry into waiting list
+     */
+    createWaitingListEntry(requestParameters: CreateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry>;
+
+    /**
+     * Use this method to delete the specific entry from the waiting list.
+     * @summary Deletes specific entry
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {string} entryId pass the id of the particular entry in the waiting list
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalWaitingListApiInterface
+     */
+    deleteWaitingListEntryRaw(requestParameters: DeleteWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>>;
+
+    /**
+     * Use this method to delete the specific entry from the waiting list.
+     * Deletes specific entry
+     */
+    deleteWaitingListEntry(requestParameters: DeleteWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void>;
+
     /**
      * By using hospitalId you get list of entries in hospital waiting list
      * @summary Provides the hospital waiting list
@@ -48,12 +104,121 @@ export interface HospitalWaitingListApiInterface {
      */
     getWaitingListEntries(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<WaitingListEntry>>;
 
+    /**
+     * By using hospitalId and entryId you can details of particular entry item hospital.
+     * @summary Provides details about waiting list entry
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {string} entryId pass the id of the particular entry in the waiting list
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalWaitingListApiInterface
+     */
+    getWaitingListEntryRaw(requestParameters: GetWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>>;
+
+    /**
+     * By using hospitalId and entryId you can details of particular entry item hospital.
+     * Provides details about waiting list entry
+     */
+    getWaitingListEntry(requestParameters: GetWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry>;
+
+    /**
+     * Use this method to update content of the waiting list entry.
+     * @summary Updates specific entry
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {string} entryId pass the id of the particular entry in the waiting list
+     * @param {WaitingListEntry} waitingListEntry Waiting list entry to update
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalWaitingListApiInterface
+     */
+    updateWaitingListEntryRaw(requestParameters: UpdateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>>;
+
+    /**
+     * Use this method to update content of the waiting list entry.
+     * Updates specific entry
+     */
+    updateWaitingListEntry(requestParameters: UpdateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry>;
+
 }
 
 /**
  * 
  */
 export class HospitalWaitingListApi extends runtime.BaseAPI implements HospitalWaitingListApiInterface {
+
+    /**
+     * Use this method to store new entry into the waiting list.
+     * Saves new entry into waiting list
+     */
+    async createWaitingListEntryRaw(requestParameters: CreateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling createWaitingListEntry.');
+        }
+
+        if (requestParameters.waitingListEntry === null || requestParameters.waitingListEntry === undefined) {
+            throw new runtime.RequiredError('waitingListEntry','Required parameter requestParameters.waitingListEntry was null or undefined when calling createWaitingListEntry.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/entries`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))),
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: WaitingListEntryToJSON(requestParameters.waitingListEntry),
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => WaitingListEntryFromJSON(jsonValue));
+    }
+
+    /**
+     * Use this method to store new entry into the waiting list.
+     * Saves new entry into waiting list
+     */
+    async createWaitingListEntry(requestParameters: CreateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry> {
+        const response = await this.createWaitingListEntryRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Use this method to delete the specific entry from the waiting list.
+     * Deletes specific entry
+     */
+    async deleteWaitingListEntryRaw(requestParameters: DeleteWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling deleteWaitingListEntry.');
+        }
+
+        if (requestParameters.entryId === null || requestParameters.entryId === undefined) {
+            throw new runtime.RequiredError('entryId','Required parameter requestParameters.entryId was null or undefined when calling deleteWaitingListEntry.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/entries/{entryId}`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))).replace(`{${"entryId"}}`, encodeURIComponent(String(requestParameters.entryId))),
+            method: 'DELETE',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.VoidApiResponse(response);
+    }
+
+    /**
+     * Use this method to delete the specific entry from the waiting list.
+     * Deletes specific entry
+     */
+    async deleteWaitingListEntry(requestParameters: DeleteWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
+        await this.deleteWaitingListEntryRaw(requestParameters, initOverrides);
+    }
 
     /**
      * By using hospitalId you get list of entries in hospital waiting list
@@ -84,6 +249,85 @@ export class HospitalWaitingListApi extends runtime.BaseAPI implements HospitalW
      */
     async getWaitingListEntries(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<WaitingListEntry>> {
         const response = await this.getWaitingListEntriesRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * By using hospitalId and entryId you can details of particular entry item hospital.
+     * Provides details about waiting list entry
+     */
+    async getWaitingListEntryRaw(requestParameters: GetWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling getWaitingListEntry.');
+        }
+
+        if (requestParameters.entryId === null || requestParameters.entryId === undefined) {
+            throw new runtime.RequiredError('entryId','Required parameter requestParameters.entryId was null or undefined when calling getWaitingListEntry.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/entries/{entryId}`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))).replace(`{${"entryId"}}`, encodeURIComponent(String(requestParameters.entryId))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => WaitingListEntryFromJSON(jsonValue));
+    }
+
+    /**
+     * By using hospitalId and entryId you can details of particular entry item hospital.
+     * Provides details about waiting list entry
+     */
+    async getWaitingListEntry(requestParameters: GetWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry> {
+        const response = await this.getWaitingListEntryRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Use this method to update content of the waiting list entry.
+     * Updates specific entry
+     */
+    async updateWaitingListEntryRaw(requestParameters: UpdateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<WaitingListEntry>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling updateWaitingListEntry.');
+        }
+
+        if (requestParameters.entryId === null || requestParameters.entryId === undefined) {
+            throw new runtime.RequiredError('entryId','Required parameter requestParameters.entryId was null or undefined when calling updateWaitingListEntry.');
+        }
+
+        if (requestParameters.waitingListEntry === null || requestParameters.waitingListEntry === undefined) {
+            throw new runtime.RequiredError('waitingListEntry','Required parameter requestParameters.waitingListEntry was null or undefined when calling updateWaitingListEntry.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/entries/{entryId}`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))).replace(`{${"entryId"}}`, encodeURIComponent(String(requestParameters.entryId))),
+            method: 'PUT',
+            headers: headerParameters,
+            query: queryParameters,
+            body: WaitingListEntryToJSON(requestParameters.waitingListEntry),
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => WaitingListEntryFromJSON(jsonValue));
+    }
+
+    /**
+     * Use this method to update content of the waiting list entry.
+     * Updates specific entry
+     */
+    async updateWaitingListEntry(requestParameters: UpdateWaitingListEntryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<WaitingListEntry> {
+        const response = await this.updateWaitingListEntryRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
