# src/api/hospital-wl/models/WaitingListEntry.ts
@@ -12,10 +12,11 @@
  * Do not edit the class manually.
  */
 
-import { exists } from '../runtime';
+import { exists, mapValues } from '../runtime';
 import type { Condition } from './Condition';
 import {
     ConditionFromJSON,
+    ConditionFromJSONTyped,
     ConditionToJSON,
 } from './Condition';
 
@@ -83,10 +84,10 @@ export function instanceOfWaitingListEntry(value: object): boolean {
 }
 
 export function WaitingListEntryFromJSON(json: any): WaitingListEntry {
-    return WaitingListEntryFromJSONTyped(json);
+    return WaitingListEntryFromJSONTyped(json, false);
 }
 
-export function WaitingListEntryFromJSONTyped(json: any): WaitingListEntry {
+export function WaitingListEntryFromJSONTyped(json: any, ignoreDiscriminator: boolean): WaitingListEntry {
     if ((json === undefined) || (json === null)) {
         return json;
     }
